[KER-02] feat: OrderItem 기능 추가